<resources>
    <string name="app_name">3717 Project</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_register">Register</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="are_you_sure">ARE YOU SURE?</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="campground_details">Campground details</string>
    <string name="history">History</string>
</resources>